ICODARA-118 class name added to dangerouslySetIneerHTL to ensure page footer remains visible

--- a/src/pages/commonComponents/AboutPage.scss
+++ b/src/pages/commonComponents/AboutPage.scss
@@ -44,9 +44,9 @@
 	padding-left: 20%;
 	padding-right: 20%;
 }
-footer.footer,
-form.search,
-header.header.clear {
+.wpData footer.footer,
+.wpData form.search,
+.wpData header.header.clear {
 	display: none;
 }
 
